# xbot_arm

./: MUJOCO_LOG.TXT  source.list.bak  test_view.py  test_xbot_arm_mjcf.py  vla_test.py
DISCOVERSE/discoverse/: __init__.py
DISCOVERSE/discoverse/aigc/rodin/: example_usage.md  post_process.py  workflow_common.py  workflow_image-to-3d.py  workflow_text-to-3d.py
DISCOVERSE/discoverse/envs/: simulator.py
DISCOVERSE/discoverse/examples/3dmouse/: 3dmouse.py
DISCOVERSE/discoverse/examples/active_slam/: camera_view.py  dummy_robot.py  mmk2.py  mmk2_open_car.py
DISCOVERSE/discoverse/examples/hil_bridge/: Dockerfile.ros  README.md  play.py  ros_entrypoint.sh  run.sh
DISCOVERSE/discoverse/examples/hil_bridge/airbot_msgs/: .pre-commit-config.yaml  CMakeLists.txt  package.xml
DISCOVERSE/discoverse/examples/mmk2/communication/: README.md  __init__.py  mujoco_mmk2_controller_api.py  mujoco_mmk2_receiver_api.py  ros2_communication.py  ros2_mmk2_api.py
DISCOVERSE/discoverse/examples/mmk2/navigation/: README.md  move_to_point_mujoco.py  move_to_point_ros2.py
DISCOVERSE/discoverse/examples/mmk2/pose_transform/: README.md  pose_transform.py  pose_transform_mujoco.py  pose_transform_ros2.py
DISCOVERSE/discoverse/examples/mocap_ik/: mocap_ik_airbot_play.py  mocap_ik_mmk2.py  mocap_ik_utils.py
DISCOVERSE/discoverse/examples/robots/: airbot_play_cer.py  airbot_replay.py  airbot_replay_control.py  control_util.py  cooperative_control.py  leap_hand_env.py  pid_control.py  quadrotor_logger.py  rm2_car.py  rm2_control.py  skyrover.py  skyrover_and_rm2car.py  skyrover_on_car_base.py
DISCOVERSE/discoverse/examples/ros1/: airbot_play_cam_ros1.py  airbot_play_ros1_joy.py  mmk2_joy_ros1_generate_policy.py  mmk2_ros1.py  mmk2_ros1_joy.py  mmk2_teach_bag_ros1.py  tok2_ros1.py
DISCOVERSE/discoverse/examples/ros2/: README.md  README_keypoints.md  airbot_play_ros2.py  airbot_play_ros2_joy.py  mmk2_joy_ros2_generate_policy.py  mmk2_ros2.py  mmk2_ros2_joy.py  tok2_ros2.py
DISCOVERSE/discoverse/examples/sensor_lidar/: mmk2_lidar_ros1.py  mmk2_lidar_ros2.py
DISCOVERSE/discoverse/examples/tasks_airbot_play/: block_bridge_place.py  close_laptop.py  cover_cup.py  open_drawer.py  pick_jujube.py  place_block.py  place_coffeecup.py  place_jujube.py  place_jujube_coffeecup.py  place_kiwi_fruit.py  push_mouse.py  stack_block.py
DISCOVERSE/discoverse/examples/tasks_hand_arm/: build_tower.py
DISCOVERSE/discoverse/examples/tasks_mmk2/: box_pick.py  cabinet_door_open.py  coffeecup_plate.py  drawer_open.py  gendata_from_json.py  jujube_pick.py  kiwi_pick.py  kiwi_place.py  pan_pick.py
DISCOVERSE/discoverse/examples/tasks_xbot_arm/: ik_test.py  place_block.py
DISCOVERSE/discoverse/gaussian_renderer/: __init__.py  gsRenderer.py  renderer_cuda.py  util_gau.py
DISCOVERSE/discoverse/randomain/: augment.py  generate.py  requirements.txt  utils.py  workflow.py
DISCOVERSE/discoverse/randomain/FlowCompute/: flowcompute.py
DISCOVERSE/discoverse/robots/: __init__.py
DISCOVERSE/discoverse/robots/airbot_play/: airbot_play_ik.py
DISCOVERSE/discoverse/robots/mmk2/: mmk2_fik.py  mmk2_fk.py  mmk2_ik.py
DISCOVERSE/discoverse/robots/xbot_arm/: xbot_arm_ik.py
DISCOVERSE/discoverse/robots_env/: airbot_play_base.py  hand_with_arm_base.py  leaphand_sensor_env_base.py  mmk2_base.py  rm2_car_base.py  skyrover_base.py  tok2_base.py
DISCOVERSE/discoverse/task_base/: __init__.py  airbot_task_base.py  hand_arm_task_base.py  mmk2_task_base.py  tok2_task_base.py
DISCOVERSE/discoverse/utils/: __init__.py  base_config.py  camera_spline_interpolation.py  controllor.py  joy_stick_ros1.py  joy_stick_ros2.py  statemachine.py
DISCOVERSE/examples/: test_xbot_arm_env.py
DISCOVERSE/examples/tasks_xbot_arm/: README.md  xbot_arm_pick_place.py
DISCOVERSE/models/mjcf/: xbot_arm_floor.xml
DISCOVERSE/models/mjcf/object/: arm_1_link.xml  arm_1_link_dependencies.xml  arm_2_link.xml  arm_2_link_dependencies.xml
DISCOVERSE/models/mjcf/tasks_xbot_arm/: place_block.xml
DISCOVERSE/models/mjcf/xbot_arm/: xbot_arm.xml  xbot_arm_control.xml  xbot_arm_dependencies.xml  xbot_arm_full.xml  xbot_arm_options.xml  xbot_arm_sensor.xml
DISCOVERSE/models/urdf/: xbot_arm.bak.urdf
DISCOVERSE/policies/dp/: env.py  train_xbot_arm.py
DISCOVERSE/policies/dp/configs/: xbot_arm_config.py
DISCOVERSE/robots_env/: xbot_arm_base.py
DISCOVERSE/scripts/: mesh2mjcf.py  run_xbot_arm_training.py
DISCOVERSE/task_base/: xbot_arm_task_base.py
xbot_arm/catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
xbot_arm/catkin_ws/devel/lib/xarm_driver/: arm_node  (+3 more)
xbot_arm/catkin_ws/src/xarm/: README.md
xbot_arm/catkin_ws/src/xarm/xarm_pick_place/: CMakeLists.txt
xbot_arm/catkin_ws/src/xarm/xarm_pick_place/config/: config_pick_place_server.yaml  pick_place_config.yaml  xarm_pick_place_config.yaml
xbot_arm/catkin_ws/src/xarm/xarm_pick_place/include/: pick_place_demo.h  pick_place_generate.h  pick_place_server.h
xbot_arm/catkin_ws/src/xarm/xarm_pick_place/launch/: pick_place_demo.launch  pick_place_server.launch  xarm_gene_pick_place.launch
xbot_arm/catkin_ws/src/xarm/xarm_pick_place/meshes/: bottle_small.DAE  大瓶子正常尺寸.DAE
xbot_arm/catkin_ws/src/xarm/xarm_pick_place/src/: block_pick_place.cpp  pick_gene_test.cpp  pick_place_client.cpp  pick_place_demo.cpp  pick_place_generate.cpp  pick_place_server.cpp  xarm_pick_place.cpp
xbot_arm/catkin_ws/src/xarm/xarm_pick_place/srv/: AddObject.srv  ArmControl.srv  RemoveObjects.srv  TargetPlacePose.srv
xbot_arm/catkin_ws/src/xarm/xarm_teleop/: CMakeLists.txt
xbot_arm/catkin_ws/src/xarm/xarm_teleop/include/: simple_keyboard.h  xbot_arm_teleop_keyboard.h
xbot_arm/catkin_ws/src/xarm/xarm_teleop/launch/: xarm_teleop_keyboard.launch
xbot_arm/catkin_ws/src/xarm/xarm_teleop/src/: simple_keyboard.cpp  xbot_arm_teleop_keyboard.cpp
xbot_arm/catkin_ws/src/xarm/xarm_tutorials/: CMakeLists.txt  package.xml
xbot_arm/catkin_ws/src/xarm/xarm_tutorials/scripts/: move_group_python_interface_tutorial.py
xbot_arm/catkin_ws/src/xarm/xarm_tutorials/src/: greet_demo.cpp  pick_place_test.cpp  test_demo.cpp
(+172 files in other folders)
